# metricsPipe

./: Dockerfile  README.md  setup.cfg
metricsPipe/: __init__.py  aggregate_halog_visit.py  collection_plane_counts_by_year.py  composable.py  halog_visit.py  hits_and_bytes_visit.py  log_visit.py
metricsPipe/tests/: conftest.py  test_aggregate_halog_visit.py  test_composable.py  test_visit.py
metricsPipe/tests/data/: halog_srv.out.20240101  halog_srv.out.20240102  halog_srv.out.20240103
scripts/: docker-entrypoint.sh  halog_services.sh  match_caom_and_halog_metadata.py  metrics_run.sh  metrics_run_incremental.sh
