[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
testpaths = metricsPipe

[metadata]
package_name = metricsPipe
description = Starting point for application to generate CAOM2 observations.
long_description = TBD 
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = TBD
edit_on_github = False
github_project = SharonGoliath/metricsPipe
install_requires =
    cadcdata
    cadctap
    importlib-metadata
    python-dateutil
    PyYAML
    vos

# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.1.0

[flake8]
max-line-length = 120

[entry_points]
metrics_run = metricsPipe.composable:run
metrics_run_incremental = metricsPipe.composable:run_incremental
